--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.19.1",
     "better-scroll": "^1.15.2",
     "postcss-px2rem": "^0.3.0",
+    "typings": "^2.1.1",
     "vant": "^2.4.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
